--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/content.css">
     <link rel="stylesheet" href="./style/navigation.css">
+    <link rel="stylesheet" href="./style/login.css">
 
     <link rel=" " href=" ">
     <title>Home page</title>
@@ -21,7 +22,9 @@
     <div class="root">
         
     </div>
-
+    <script src="./js/cleaner.js"></script>
+    <script src="./js/constants.js"></script>
+    <script src="./js/login.js"> </script>
     <script src="./js/navigation.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/content.js"></script>
