--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 <body>
     
-    <div class="root">
-        
-    </div>
+    <div class="root"></div>
+    <script src="./js/logoSVG.js"></script>
     <script src="./js/cleaner.js"></script>
     <script src="./js/constants.js"></script>
     <script src="./js/login.js"> </script>
