--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="img/img.png " />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./style/contentNewIvent.css">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/contentUsers.css">
@@ -71,6 +72,7 @@
             </defs>
         </svg>
     </div>
+    <script src="./js/contentCourses_video.js"></script>
     <script src="./js/logoSVG.js"></script>
     <script src="./js/cleaner.js"></script>
     <script src="./js/constants.js"></script>
