--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="icon" type="image/x-icon" href="img/img.png " />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./style/contentNewIvent.css">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/contentUsers.css">
     <link rel="stylesheet" href="./style/navigation.css">
     <link rel="stylesheet" href="./style/login.css">
-
-    <link rel=" " href=" ">
+    <link rel="stylesheet" href="./style/contentCourses_video.css">
+    <link rel=" stylesheet" href="./style/contentHome_myvideo_learning.css">
     <title>Home page</title>
 </head>
 
@@ -72,14 +71,19 @@
             </defs>
         </svg>
     </div>
-    <script src="./js/contentCourses_video.js"></script>
-    <script src="./js/logoSVG.js"></script>
+
+    <!-- <script src="./js/logoSVG.js"></script> not work-->
     <script src="./js/cleaner.js"></script>
     <script src="./js/constants.js"></script>
-    <script src="./js/login.js"> </script>
-    <script src="./js/navigation.js"></script>
     <script src="./js/header.js"></script>
-    <script src="./js/contentUsers.js"></script>
+    <script src="./js/navigation.js"></script>
+    <script src="./js/login.js"></script>
+    <script src='./js/Content/home_myvideo_learning.js'></script>
+    <script src="./js/Content/users.js"></script>
+    <script src="./js/Content/courses_video.js"></script>
+    <script src="./js/Content/saved.js"></script>
+
+
     <script src="./js/main.js"></script>
 </body>
 
