--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="./js/Content/users.js"></script>
     <script src="./js/Content/courses_video.js"></script>
     <script src="./js/Content/saved.js"></script>
+    <script src="./js/Content/new_ivent.js"></script>
 
 
     <script src="./js/main.js"></script>
