--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="./style/navigation.css">
     <link rel="stylesheet" href="./style/login.css">
     <link rel="stylesheet" href="./style/contentCourses_video.css">
-    <link rel=" stylesheet" href="./style/contentHome_myvideo_learning.css">
+    <link rel="stylesheet" href="./style/contentHome_myvideo_learning.css">
+    <link rel="stylesheet" href="./style/new_ivent.css">
+    <link rel="stylesheet" href="./style/email.css">
+
+
     <title>Home page</title>
 </head>
 
@@ -83,7 +87,7 @@
     <script src="./js/Content/courses_video.js"></script>
     <script src="./js/Content/saved.js"></script>
     <script src="./js/Content/new_ivent.js"></script>
-
+    <script src="./js/Content/email.js"></script>
 
     <script src="./js/main.js"></script>
 </body>
