--- a/login.html
+++ b/login.html
@@ -5,21 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="img/img.png " />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/header.css">
-    <link rel="stylesheet" href="./style/contentUsers.css">
-    <link rel="stylesheet" href="./style/navigation.css">
     <link rel="stylesheet" href="./style/login.css">
-    <link rel="stylesheet" href="./style/contentCourses_video.css">
-    <link rel="stylesheet" href="./style/contentHome_myvideo_learning.css">
-    <link rel="stylesheet" href="./style/new_ivent.css">
-    <link rel="stylesheet" href="./style/email.css">
 
 
-    <title>Home page</title>
+
+    <title>Login page</title>
 </head>
 
 <body>
@@ -74,22 +67,17 @@
 
             </defs>
         </svg>
+        <form class="box">
+            <h1>LOGIN</h1>
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+           <!-- <button><a href="index2_static.html" target="_blank">Login</a></button>  немає змісту в паролі-->
+            <input type="submit" value="Login">
+        </form>
     </div>
 
-    <!-- <script src="./js/logoSVG.js"></script> not work-->
-    <script src="./js/cleaner.js"></script>
     <script src="./js/constants.js"></script>
-    <script src="./js/header.js"></script>
-    <script src="./js/navigation.js"></script>
     <script src="./js/login.js"></script>
-    <script src='./js/Content/home_myvideo_learning.js'></script>
-    <script src="./js/Content/users.js"></script>
-    <script src="./js/Content/courses_video.js"></script>
-    <script src="./js/Content/saved.js"></script>
-    <script src="./js/Content/new_ivent.js"></script>
-    <script src="./js/Content/email.js"></script>
-
-    <script src="./js/main.js"></script>
 </body>
 
 </html>
