update login functionality

--- a/login.html
+++ b/login.html
@@ -71,8 +71,8 @@
             <h1>LOGIN</h1>
             <input type="text" placeholder="Username">
             <input type="password" placeholder="Password">
-           <!-- <button><a href="index2_static.html" target="_blank">Login</a></button>  немає змісту в паролі-->
-            <input type="submit" value="Login">
+           <button onclick="onClick()" class="button"><a>Login</a></button>  
+        
         </form>
     </div>
 
